--- a/SCSS/layout/_header.scss
+++ b/SCSS/layout/_header.scss
@@ -2,7 +2,7 @@
 
 .header {
     background-color: v.$color-primary-400;
-    width: 100%;
+    width: 100vw;
     position: fixed;
     z-index: 9999;
     box-shadow: 3px 0 30px rgba(0, 0, 0, .1);
