--- a/SCSS/layout/_navigation.scss
+++ b/SCSS/layout/_navigation.scss
@@ -24,7 +24,8 @@
         padding: 5px;
         position: relative;
 
-        &:hover {
+        &:hover,
+        &:active {
             font-weight: 600;
         }
 
