--- a/SCSS/components/_card-action.scss
+++ b/SCSS/components/_card-action.scss
@@ -3,7 +3,7 @@
 
 
 .card-action {
-    background-color: v.$color-white;
+    background-color: v.$color-primary-100;
     color: v.$color-grey-900;
     padding: 20px;
 
