--- a/_includes/partials/header.njk
+++ b/_includes/partials/header.njk
@@ -2,15 +2,15 @@
 
 <header class="header">
     <div class="header__wrapp u-center-text">
-        <img class="logo" src="icons/logo.svg" alt="logo">
+        <img class="logo" src="/icons/logo.svg" alt="logo">
 
         <!--Mobile-nav-->
 
         <div class="mobile-nav">
             <input class="mobile-nav__checkbox" type="checkbox" id="mobile-nav-toggle">
-            <label class="mobile-nav__button" for="mobile-nav-toggle"><img class="mobile-nav__icon" src="icons/icon-nav.svg" alt="navigace"></label>
+            <label class="mobile-nav__button" for="mobile-nav-toggle"><img class="mobile-nav__icon" src="/icons/icon-nav.svg" alt="navigace"></label>
 
-            <a class="mobile-nav__icon-close" href="index.html"><img src="icons/icon-close.svg" width="35px" alt="ikona zavřít"></a>
+            <a class="mobile-nav__icon-close" href="index.html"><img src="/icons/icon-close.svg" width="35px" alt="ikona zavřít"></a>
 
             <nav class="mobile-nav__nav">
                 <ul class="mobile-nav__list">
