--- a/css/style.css
+++ b/css/style.css
@@ -1051,8 +1051,7 @@ template {
 }
 
 .section-o-nas {
-  margin: 0 auto;
-  padding: 1.25rem;
+  padding: clamp(1.25rem, 8vw, 2.5rem);
   padding-top: 6rem;
 }
 .section-o-nas__flex {
@@ -1066,6 +1065,9 @@ template {
     flex-direction: row;
   }
 }
+.section-o-nas__fig {
+  max-width: 90vw;
+}
 @media screen and (min-width: 750px) {
   .section-o-nas__fig {
     margin-bottom: -21rem;
@@ -1073,13 +1075,14 @@ template {
 }
 .section-o-nas__img {
   border: 20px solid #fff;
+  width: 100%;
 }
 .section-o-nas__content {
   color: #2D332E;
 }
 
 .section-o-nas-2 {
-  padding: 1.25rem;
+  padding: clamp(1.25rem, 8vw, 2.5rem);
   color: #2D332E;
 }
 .section-o-nas-2__flex {
@@ -1098,4 +1101,32 @@ template {
 }
 .section-o-nas-2__first-content {
   flex: 1;
+}
+.section-o-nas-2__third-content {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+@media screen and (min-width: 750px) {
+  .section-o-nas-2__third-content {
+    flex-direction: row;
+    gap: 5rem;
+  }
+}
+@media screen and (min-width: 750px) {
+  .section-o-nas-2__fig {
+    margin-bottom: -20rem;
+    max-width: 90vw;
+  }
+}
+.section-o-nas-2__img {
+  border: 20px solid #fff;
+  max-width: 100%;
+}
+
+.section-medallions {
+  padding: clamp(1.25rem, 8vw, 2.5rem);
+}
+.section-medallions__title {
+  color: #2D332E;
 }/*# sourceMappingURL=style.css.map */
