--- a/css/style.css
+++ b/css/style.css
@@ -1065,9 +1065,6 @@ template {
     flex-direction: row;
   }
 }
-.section-o-nas__fig {
-  max-width: 90vw;
-}
 @media screen and (min-width: 750px) {
   .section-o-nas__fig {
     margin-bottom: -21rem;
@@ -1113,10 +1110,16 @@ template {
     gap: 5rem;
   }
 }
+.section-o-nas-2__part-of-flex {
+  flex: 1;
+}
+.section-o-nas-2__fig {
+  flex: 1;
+  max-width: 95vw;
+}
 @media screen and (min-width: 750px) {
   .section-o-nas-2__fig {
     margin-bottom: -20rem;
-    max-width: 90vw;
   }
 }
 .section-o-nas-2__img {
