Add Section Medallions

--- a/SCSS/base/_utilities.scss
+++ b/SCSS/base/_utilities.scss
@@ -17,6 +17,7 @@
 
 .u-padding-top-small {padding-top: 2rem !important;}
 .u-padding-top-medium {padding-top: 4rem !important;}
+.u-padding-top-large {padding-top: 8rem !important;}
 .u-padding-left-small {padding-left: 1.3rem !important;}
 .u-padding-left-medium {padding-left: 3.2rem !important;}
 .u-padding-bottom-small {padding-bottom: 2rem !important;}
