--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -9,6 +9,7 @@
 @use 'components/buttons';
 @use 'components/card-action';
 @use 'components/columns';
+@use 'components/medallion';
 
 
 @use 'layout/footer';
