--- a/_includes/partials/header.njk
+++ b/_includes/partials/header.njk
@@ -15,7 +15,7 @@
             <nav class="mobile-nav__nav">
                 <ul class="mobile-nav__list">
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">Domů</a></li>
-                    <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">O nás</a></li>
+                    <li class="mobile-nav__item"><a class="mobile-nav__link" href="/o-nas/">O nás</a></li>
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">Podpora</a></li>
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">Co děláme</a></li>
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">Komunitní dění</a></li>
@@ -32,7 +32,7 @@
         <nav class="navigation">
             <ul class="navigation__list">
                 <li class="navigation__item"><a class="navigation__link" href="#">Domů</a></li>
-                <li class="navigation__item has-submenu"><a class="navigation__link" href="#">O nás</a>
+                <li class="navigation__item has-submenu"><a class="navigation__link" href="/o-nas/">O nás</a>
                     <ul class="navigation__submenu">
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Co se povedlo</a></li>
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Napsali o nás</a></li>
