--- a/_includes/partials/header.njk
+++ b/_includes/partials/header.njk
@@ -2,7 +2,7 @@
 
 <header class="header">
     <div class="header__wrapp u-center-text">
-        <img class="logo" src="/icons/logo.svg" alt="logo">
+        <a href="/"><img class="logo" src="/icons/logo.svg" alt="logo"></a>
 
         <!--Mobile-nav-->
 
@@ -14,7 +14,7 @@
 
             <nav class="mobile-nav__nav">
                 <ul class="mobile-nav__list">
-                    <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">Domů</a></li>
+                    <li class="mobile-nav__item"><a class="mobile-nav__link" href="/">Domů</a></li>
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="/o-nas/">O nás</a></li>
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">Podpora</a></li>
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">Co děláme</a></li>
@@ -31,7 +31,7 @@
 
         <nav class="navigation">
             <ul class="navigation__list">
-                <li class="navigation__item"><a class="navigation__link" href="#">Domů</a></li>
+                <li class="navigation__item"><a class="navigation__link" href="/">Domů</a></li>
                 <li class="navigation__item has-submenu"><a class="navigation__link" href="/o-nas/">O nás</a>
                     <ul class="navigation__submenu">
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Co se povedlo</a></li>
