--- a/_includes/partials/footer.njk
+++ b/_includes/partials/footer.njk
@@ -4,7 +4,7 @@
         <div>
             <div class="footer__conteiner u-padding-top-medium u-padding-bottom-small">
                 <figcaption class="footer__fig"><img src="/icons/logo.svg" width="200px" alt="logo KoniPAS"></figcaption>
-                <div class="footer__menu-item"><a class="footer__link" href="#">O nás</a>
+                <div class="footer__menu-item"><a class="footer__link" href="/o-nas/">O nás</a>
                     <ul class="footer__submenu">
                         <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Co se povedlo</a></li>
                         <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Napsali o nás</a></li>
@@ -38,7 +38,7 @@
                 <div class="footer__menu-item">
                     <ul class="footer__submenu footer__submenu--last">
                         <li class="footer__menu-item"><a class="footer__link" href="#">Podpora</a></li>
-                        <li class="footer__menu-item"><a class="footer__link" href="#">Vize</a></li>
+                        <li class="footer__menu-item"><a class="footer__link" href="/vize/">Vize</a></li>
                         <li class="footer__menu-item"><a class="footer__link" href="#">PAS</a></li>
                         <li class="footer__menu-item"><a class="footer__link" href="#">Partneři</a></li>
                         <li class="footer__menu-item"><a class="footer__link" href="#">Kontakt</a></li>
