--- a/_includes/partials/header.njk
+++ b/_includes/partials/header.njk
@@ -20,7 +20,7 @@
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">Co děláme</a></li>
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">Komunitní dění</a></li>
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">PAS</a></li>
-                    <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">Vize</a></li>
+                    <li class="mobile-nav__item"><a class="mobile-nav__link" href="/vize/">Vize</a></li>
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">Partneři</a></li>
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">Kontakt</a></li>
                 </ul>
@@ -65,7 +65,7 @@
                     </ul>
                 </li>
                 <li class="navigation__item"><a class="navigation__link" href="#">PAS</a></li>
-                <li class="navigation__item"><a class="navigation__link" href="#">Vize</a></li>
+                <li class="navigation__item"><a class="navigation__link" href="/vize/">Vize</a></li>
                 <li class="navigation__item"><a class="navigation__link" href="#">Partneři</a></li>
                 <li class="navigation__item"><a class="navigation__link" href="#">Kontakt</a></li>
             </ul>
