--- a/_includes/partials/header.njk
+++ b/_includes/partials/header.njk
@@ -17,7 +17,7 @@
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="/">Domů</a></li>
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="/o-nas/">O nás</a></li>
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">Podpora</a></li>
-                    <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">Co děláme</a></li>
+                    <li class="mobile-nav__item"><a class="mobile-nav__link" href="/co-delame/">Co děláme</a></li>
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">Komunitní dění</a></li>
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">PAS</a></li>
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="/vize/">Vize</a></li>
@@ -43,7 +43,7 @@
                     </ul>
                 </li>
                 <li class="navigation__item"><a class="navigation__link" href="#">Podpora</a></li>
-                <li class="navigation__item has-submenu"><a class="navigation__link" href="#">Co děláme</a>
+                <li class="navigation__item has-submenu"><a class="navigation__link" href="/co-delame/">Co děláme</a>
                     <ul class="navigation__submenu">
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Pomáháme rodinám</a></li>
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Vzděláváme rodiče</a></li>
@@ -53,7 +53,7 @@
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Pořádáme akce</a></li>
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Služby &amp; terapie</a></li>
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Půjčujeme pomůcky</a></li>
-                        <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Odborné stáže</a></li>
+                        <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="/co-delame/odborne-staze/">Odborné stáže</a></li>
                     </ul>
                 </li>
                 <li class="navigation__item has-submenu"><a class="navigation__link" href="#">Komunitní dění</a>
