--- a/_includes/partials/footer.njk
+++ b/_includes/partials/footer.njk
@@ -14,7 +14,7 @@
                         <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Výroční zprávy</a></li>
                     </ul>
                 </div>
-                <div class="footer__menu-item"><a class="footer__link" href="#">Co děláme</a>
+                <div class="footer__menu-item"><a class="footer__link" href="/co-delame/">Co děláme</a>
                     <ul class="footer__submenu">
                         <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Pomáháme rodinám</a></li>
                         <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Vzděláváme rodiče</a></li>
@@ -24,7 +24,7 @@
                         <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Podporujeme děti</a></li>
                         <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Služby &amp; terapie</a></li>
                         <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Půjčujeme pomůcky</a></li>
-                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Odborné stáže</a></li>
+                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="/co-delame/odborne-staze/">Odborné stáže</a></li>
                     </ul>
                 </div>
                 <div class="footer__menu-item"><a class="footer__link" href="#">Komunitní dění</a>
