--- a/SCSS/base/_typography.scss
+++ b/SCSS/base/_typography.scss
@@ -34,6 +34,11 @@ a {
     font-weight: 400;
 }
 
+.heading-quartiary {
+    font-size: clamp(1.3rem, 3vw, 1.5rem);
+    font-weight: 700;
+}
+
 
 .paragraph {
     font-size: clamp(1rem, 3vw, 1.1rem);
