--- a/_includes/partials/footer.njk
+++ b/_includes/partials/footer.njk
@@ -40,7 +40,7 @@
                         <li class="footer__menu-item"><a class="footer__link" href="#">Podpora</a></li>
                         <li class="footer__menu-item"><a class="footer__link" href="/vize/">Vize</a></li>
                         <li class="footer__menu-item"><a class="footer__link" href="#">PAS</a></li>
-                        <li class="footer__menu-item"><a class="footer__link" href="#">Partneři</a></li>
+                        <li class="footer__menu-item"><a class="footer__link" href="/partneri/">Partneři</a></li>
                         <li class="footer__menu-item"><a class="footer__link" href="#">Kontakt</a></li>
                     </ul>
                 </div>
