--- a/_includes/partials/header.njk
+++ b/_includes/partials/header.njk
@@ -21,7 +21,7 @@
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">Komunitní dění</a></li>
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">PAS</a></li>
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="/vize/">Vize</a></li>
-                    <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">Partneři</a></li>
+                    <li class="mobile-nav__item"><a class="mobile-nav__link" href="/partneri/">Partneři</a></li>
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">Kontakt</a></li>
                 </ul>
             </nav>
@@ -66,7 +66,7 @@
                 </li>
                 <li class="navigation__item"><a class="navigation__link" href="#">PAS</a></li>
                 <li class="navigation__item"><a class="navigation__link" href="/vize/">Vize</a></li>
-                <li class="navigation__item"><a class="navigation__link" href="#">Partneři</a></li>
+                <li class="navigation__item"><a class="navigation__link" href="/partneri/">Partneři</a></li>
                 <li class="navigation__item"><a class="navigation__link" href="#">Kontakt</a></li>
             </ul>
         </nav>
