--- a/_includes/partials/footer.njk
+++ b/_includes/partials/footer.njk
@@ -14,20 +14,20 @@
                         <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Výroční zprávy</a></li>
                     </ul>
                 </div>
-                <div class="footer__menu-item"><a class="footer__link" href="/co-delame/">Co děláme</a>
+                <div class="footer__menu-item"><a class="footer__link" href="#">Co děláme</a>
                     <ul class="footer__submenu">
-                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Pomáháme rodinám</a></li>
+                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="/co-delame/pomahame-rodinam/">Pomáháme rodinám</a></li>
                         <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Vzděláváme rodiče</a></li>
                         <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Řekli o nás</a></li>
-                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Sdílíme vizi</a></li>
+                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="/vize/">Sdílíme vizi</a></li>
                         <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Tvoříme komunitu</a></li>
                         <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Podporujeme děti</a></li>
-                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Služby &amp; terapie</a></li>
+                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="/co-delame/nase-sluzby/">Služby &amp; terapie</a></li>
                         <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Půjčujeme pomůcky</a></li>
                         <li class="footer__submenu-item"><a class="footer__submenu-link" href="/co-delame/odborne-staze/">Odborné stáže</a></li>
                     </ul>
                 </div>
-                <div class="footer__menu-item"><a class="footer__link" href="#">Komunitní dění</a>
+                <div class="footer__menu-item"><a class="footer__link" href="/komunitni-deni/">Komunitní dění</a>
                     <ul class="footer__submenu">
                         <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Aktuality a pozvánky</a></li>
                         <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Setkání podpůrné skupiny</a></li>
