--- a/css/style.css
+++ b/css/style.css
@@ -1035,6 +1035,14 @@ template {
   }
 }
 
+.comunity__fig {
+  max-width: 100vw;
+}
+
+.comunity__img {
+  width: 100%;
+}
+
 .section-o-nas {
   padding: clamp(1.25rem, 8vw, 2.5rem);
   padding-top: 6rem;
