Working in progress

--- a/_includes/partials/footer.njk
+++ b/_includes/partials/footer.njk
@@ -29,8 +29,8 @@
                 </div>
                 <div class="footer__menu-item"><a class="footer__link" href="/komunitni-deni/">Komunitní dění</a>
                     <ul class="footer__submenu">
-                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Aktuality a pozvánky</a></li>
-                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Setkání podpůrné skupiny</a></li>
+                        <!-- <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Aktuality a pozvánky</a></li>
+                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Setkání podpůrné skupiny</a></li> -->
                         <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Registrace na přednášky</a></li>
                         <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Foto z akcí</a></li>
                     </ul>
