--- a/_includes/partials/header.njk
+++ b/_includes/partials/header.njk
@@ -19,10 +19,10 @@
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">Podpora</a></li>
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="/co-delame/pomahame-rodinam/">Co děláme</a></li>
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="/komunitni-deni/">Komunitní dění</a></li>
-                    <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">PAS</a></li>
+                    <!-- <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">PAS</a></li> -->
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="/vize/">Vize</a></li>
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="/partneri/">Partneři</a></li>
-                    <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">Kontakt</a></li>
+                    <li class="mobile-nav__item"><a class="mobile-nav__link" href="/kontakt/">Kontakt</a></li>
                 </ul>
             </nav>
         </div>
@@ -48,7 +48,7 @@
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="/co-delame/pomahame-rodinam/">Pomáháme rodinám</a></li>
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Vzděláváme rodiče</a></li>
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="/vize/">Sdílíme vizi</a></li>
-                        <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Tvoříme komunitu</a></li>
+                        <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="ˇ/komunitni-deni/">Tvoříme komunitu</a></li>
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Podporujeme děti</a></li>
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Pořádáme akce</a></li>
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="/co-delame/nase-sluzby/">Služby &amp; terapie</a></li>
@@ -64,10 +64,10 @@
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Fotky z akcí</a></li>
                     </ul>
                 </li>
-                <li class="navigation__item"><a class="navigation__link" href="#">PAS</a></li>
+                <!-- <li class="navigation__item"><a class="navigation__link" href="#">PAS</a></li> -->
                 <li class="navigation__item"><a class="navigation__link" href="/vize/">Vize</a></li>
                 <li class="navigation__item"><a class="navigation__link" href="/partneri/">Partneři</a></li>
-                <li class="navigation__item"><a class="navigation__link" href="#">Kontakt</a></li>
+                <li class="navigation__item"><a class="navigation__link" href="/kontakt/">Kontakt</a></li>
             </ul>
         </nav>
     </div>
