--- a/_includes/partials/footer.njk
+++ b/_includes/partials/footer.njk
@@ -39,7 +39,7 @@
                     <ul class="footer__submenu footer__submenu--last">
                         <li class="footer__menu-item"><a class="footer__link" href="#">Podpora</a></li>
                         <li class="footer__menu-item"><a class="footer__link" href="/vize/">Vize</a></li>
-                        <li class="footer__menu-item"><a class="footer__link" href="#">PAS</a></li>
+                        <!-- <li class="footer__menu-item"><a class="footer__link" href="#">PAS</a></li> -->
                         <li class="footer__menu-item"><a class="footer__link" href="/partneri/">Partneři</a></li>
                         <li class="footer__menu-item"><a class="footer__link" href="#">Kontakt</a></li>
                     </ul>
